# GMU-Daily-Permit-Automation

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  README.md  config.template.toml  main.py  pyproject.toml  requirements.txt  utils.py
gmu_cli/: cli.py  utils.py
